Started changes for responsive mobile.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <img id="bootstrap" src="./images/bootstrapLogo.svg" alt="">
           <img id="js" src="./images/javascriptLogo.png" alt="">
           <img id="nodejs" src="./images/nodejsLogo.png" alt="">
-          <img id="npm" src="./images/npmLogo.png" alt="">
+          <img id="npm" src="./images/NPMLogo.png" alt="">
         </div>
 
 
