--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <link href="https://fonts.googleapis.com/css?family=Marcellus+SC" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ramabhadra" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
-    <link charset="utf-8" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" 
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" 
           media="screen" rel="stylesheet" title="no title">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <nav>
+    <!--<nav>
       <div class="navbar">
         <a class="navbar-item" href="#home">Home</a>
         <a class="navbar-item" href="#about">About</a>
@@ -26,7 +26,38 @@
         <a class="navbar-item" href="#skills">Skills</a>
         <a class="navbar-item" href="#contact">Contact</a>
       </div>
+    </nav>-->
+
+    <nav>
+      <ul>
+        <li><a class="navbar-item" href="#home">Home</a></li>
+        <li><a class="navbar-item" href="#about">About</a></li>
+        <li><a class="navbar-item" href="#portfolio">Portfolio</a></li>
+        <li><a class="navbar-item" href="#skills">Skills</a></li>
+        <li><a class="navbar-item" href="#contact">Contact</a></li>
+      </ul>
+      <select>
+        <option value="" selected="selected">Select</option>
+        <option value="#home">Home</option>
+        <option value="#about">About</option>
+        <option value="#portfolio">Portfolio</option>
+        <option value="rickmurdock"><a class="navbar-item" href="#skills">Skills</a></option>
+        <option value="#contact"><a href="#contact">Contact</a></option>
+      </select>
+
+      <!--<div class="dropdown">
+        <button class="dropbtn">Menu</button>
+        <div class="dropdown-content">
+          <a href="#home">Home</a>
+          <a href="#about">About</a>
+          <a href="#portfolio">Portfolio</a>
+          <a href="#skills">Skills</a>
+          <a href="#contact">Contact</a>
+        </div>
+      </div>-->
+
     </nav>
+
     <div id="home" class="parallax">
       <div id="intro">
         <h1 id="intro-name">Rick Murdock</h1>
@@ -67,7 +98,7 @@
             </a>
             <br>
             <br>
-            <a href="https://github.com/rickmurdock/mars-rover-photo-app" class="portfollio-button">View on GitHub</a>
+            <a href="https://github.com/rickmurdock/mars-rover-photo-app" class="portfolio-button">View on GitHub</a>
           </div>
           <div class="portfolio-item">
             <h4>Mars Rover Photo App</h4>
@@ -76,7 +107,7 @@
             </a>
             <br>
             <br>
-            <a href="https://github.com/rickmurdock/SoundCloud-Music-Search" class="portfollio-button">View on GitHub</a>
+            <a href="https://github.com/rickmurdock/SoundCloud-Music-Search" class="portfolio-button">View on GitHub</a>
           </div>
           <div class="portfolio-item"></div>
         </div>
@@ -86,7 +117,7 @@
     <div id="skills">
       <div class="skills-wrapper" >
         <h2 class="skills-title">Skills</h2> 
-
+        <div class="skills-container">    
         <div id="skills-json">
           <pre>
   <code class="language-javascript">
@@ -131,28 +162,29 @@
           <img id="npm" src="./images/NPMLogo.png" alt="">
         </div>
 
-
+        </div>
       </div>
     </div>
     <div id="contact">
       <div class="contact-wrapper" >
         <h2 class="contact-title">Contact Me</h2>
         <div class="contact-info">
-        <a class="contact-email" href="mailto:rick.murdock@live.com?Subject=Portfolio%20Contact"><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;rick.murdock@live.com</a>
-        <br><br>
-        <h4 class="contact-phone">
-          <i class="fa fa-mobile" aria-hidden="true"></i>&nbsp;615-513-4313
-        </h4>
-        <div class="icons">
-          <a href="https://github.com/rickmurdock"><i class="fa fa-github-square fa-2x github" id="github"></i></a>
-          <a href="https://www.linkedin.com/in/rickmurdock/">
-              <i class="fa fa-linkedin-square fa-2x linkedin" id="linkedin"></i>
-          </a>
-          <a href="https://www.twitter.com/rickmurdock">
-              <i class="fa fa-twitter-square fa-2x twitter" id="twitter"></i></a>
-        </div> 
+          <a class="contact-email" href="mailto:rick.murdock@live.com?Subject=Portfolio%20Contact"><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;rick.murdock@live.com</a>
+          <br><br>
+          <h4 class="contact-phone">
+            <i class="fa fa-mobile" aria-hidden="true"></i>&nbsp;615-513-4313
+          </h4>
+          <div class="contact-icons">
+            <a href="https://github.com/rickmurdock"><i class="fa fa-github-square github"></i></a>
+            <a href="https://www.linkedin.com/in/rickmurdock/"><i class="fa fa-linkedin-square linkedin"></i></a>
+            <a href="https://www.twitter.com/rickmurdock"><i class="fa fa-twitter-square twitter"></i></a>
+          </div> 
+          <div class="contact-icons-2x">
+            <a href="https://github.com/rickmurdock"><i class="fa fa-github-square fa-2x github"></i></a>
+            <a href="https://www.linkedin.com/in/rickmurdock/"><i class="fa fa-linkedin-square fa-2x linkedin"></i></a>
+            <a href="https://www.twitter.com/rickmurdock"><i class="fa fa-twitter-square fa-2x twitter"></i></a>
+          </div> 
         </div>
-
       </div>  
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
