Cleaning up portfolio. Added e-commerce mock site.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="HTML,CSS">
     <meta name="author" content="Rick Murdock">
     <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Marcellus+SC" rel="stylesheet">
@@ -69,14 +70,17 @@
         <h2 class="portfolio-title">Portfolio</h2>
         <div class="portfolio-projects">
 
+
           <div class="portfolio-item">
             <h4 class="portfolio-item-title">SoundCloud Music Search</h4>
-            <a href="http://musicmachine.surge.sh/"> 
-              <img class="portfolio-image" src="./images/murdocksMusicMachine.png" alt="" >
-            </a>
-            <br>
-            <br>
-            <a class="portfolio-button" href="https://github.com/rickmurdock/SoundCloud-Music-Search">View on GitHub</a>
+            <div>
+              <a href="http://musicmachine.surge.sh/"> 
+                <img class="portfolio-image" src="./images/murdocksMusicMachine.png" alt="" >
+              </a>
+            </div>
+            <div class="portfolio-button-wrapper">
+              <a class="portfolio-button" href="https://github.com/rickmurdock/SoundCloud-Music-Search">View on GitHub</a>
+            </div>
           </div>
 
           <div class="portfolio-item">
@@ -84,11 +88,20 @@
             <a href="http://marsroversphotos.surge.sh/"> 
               <img class="portfolio-image" src="./images/marsRover.png" alt="" >
             </a>
-            <br>
-            <br>
-            <a class="portfolio-button" href="https://github.com/rickmurdock/mars-rover-photo-app">View on GitHub</a>
+            <div class="portfolio-button-wrapper">
+              <a class="portfolio-button" href="https://github.com/rickmurdock/mars-rover-photo-app">View on GitHub</a>
+            </div>
           </div>
-          <div class="portfolio-item"></div>
+
+          <div class="portfolio-item">
+            <h4 class="portfolio-item-title">E-commerce Mock Site</h4>
+            <a href="http://ricksautoparts.surge.sh/"> 
+              <img class="portfolio-image" src="./images/ricksAutoParts.png" alt="" >
+            </a>
+            <div class="portfolio-button-wrapper">
+              <a class="portfolio-button" href="https://github.com/rickmurdock/e-commerce-mock-site">View on GitHub</a>
+            </div>
+          </div>
         </div>
       </div>  
     </div>
