Added film club and tic-tac-toe projects to portfolio.

--- a/index.html
+++ b/index.html
@@ -102,6 +102,27 @@
               <a class="portfolio-button" href="https://github.com/rickmurdock/e-commerce-mock-site">View on GitHub</a>
             </div>
           </div>
+
+          <div class="portfolio-item">
+            <h4 class="portfolio-item-title">Film Club Mock Site</h4>
+            <a href="http://filmclub.surge.sh/"> 
+              <img class="portfolio-image" src="./images/filmClub.png" alt="" >
+            </a>
+            <div class="portfolio-button-wrapper">
+              <a class="portfolio-button" href="https://github.com/rickmurdock/Film-Club">View on GitHub</a>
+            </div>
+          </div>
+
+          <div class="portfolio-item">
+            <h4 class="portfolio-item-title">Tic-Tac-Toe React App</h4>
+            <a href="http://tictactoereact.surge.sh/"> 
+              <img class="portfolio-image" src="./images/ticTacToe.png" alt="" >
+            </a>
+            <div class="portfolio-button-wrapper">
+              <a class="portfolio-button" href="https://github.com/rickmurdock/tic-tac-toe-react-redux">View on GitHub</a>
+            </div>
+          </div>
+
         </div>
       </div>  
     </div>
