Restyled portfolio section.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Rick Murdock</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Rick Murdock's - Home Page">
+    <meta name="description" content="Portfolio - Rick Murdock">
     <meta name="keywords" content="HTML,CSS">
     <meta name="author" content="Rick Murdock">
     <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri" rel="stylesheet">
@@ -14,8 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Marcellus+SC" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ramabhadra" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" 
-          media="screen" rel="stylesheet" title="no title">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" media="screen" rel="stylesheet" title="no title">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -73,13 +72,11 @@
 
           <div class="portfolio-item">
             <h4 class="portfolio-item-title">SoundCloud Music Search</h4>
-            <div>
               <a href="http://musicmachine.surge.sh/"> 
                 <img class="portfolio-image" src="./images/murdocksMusicMachine.png" alt="" >
               </a>
-            </div>
             <div class="portfolio-button-wrapper">
-              <a class="portfolio-button" href="https://github.com/rickmurdock/SoundCloud-Music-Search">View on GitHub</a>
+              <a  href="https://github.com/rickmurdock/SoundCloud-Music-Search"><i class="fa fa-github fa-2x"></i></a>
             </div>
           </div>
 
@@ -89,7 +86,7 @@
               <img class="portfolio-image" src="./images/marsRover.png" alt="" >
             </a>
             <div class="portfolio-button-wrapper">
-              <a class="portfolio-button" href="https://github.com/rickmurdock/mars-rover-photo-app">View on GitHub</a>
+              <a  href="https://github.com/rickmurdock/mars-rover-photo-app"><i class="fa fa-github fa-2x"></i></a>
             </div>
           </div>
 
@@ -99,7 +96,7 @@
               <img class="portfolio-image" src="./images/ricksAutoParts.png" alt="" >
             </a>
             <div class="portfolio-button-wrapper">
-              <a class="portfolio-button" href="https://github.com/rickmurdock/e-commerce-mock-site">View on GitHub</a>
+              <a  href="https://github.com/rickmurdock/e-commerce-mock-site"><i class="fa fa-github fa-2x"></i></a>
             </div>
           </div>
 
@@ -109,7 +106,7 @@
               <img class="portfolio-image" src="./images/filmClub.png" alt="" >
             </a>
             <div class="portfolio-button-wrapper">
-              <a class="portfolio-button" href="https://github.com/rickmurdock/Film-Club">View on GitHub</a>
+              <a  href="https://github.com/rickmurdock/Film-Club"><i class="fa fa-github fa-2x"></i></a>
             </div>
           </div>
 
@@ -119,7 +116,7 @@
               <img class="portfolio-image" src="./images/ticTacToe.png" alt="" >
             </a>
             <div class="portfolio-button-wrapper">
-              <a class="portfolio-button" href="https://github.com/rickmurdock/tic-tac-toe-react-redux">View on GitHub</a>
+              <a  href="https://github.com/rickmurdock/tic-tac-toe-react-redux"><i class="fa fa-github fa-2x"></i></a>
             </div>
           </div>
 
@@ -130,42 +127,6 @@
     <div id="skills">
       <div class="skills-wrapper" >
         <h2 class="skills-title">Skills</h2> 
-        <div class="skills-container">    
-        <!--<div id="skills-json">
-          <pre>
-  <code class="language-javascript">
-    tech_skills = [ 
-      { front_end: [ 
-                      "HTML5", 
-                      "CSS3",
-                      "JavaScript",
-                      "Bootstrap", 
-                      "jQuery",
-                      "React",
-                      "Redux",
-                      "Responsive Web Design"   
-                    ]
-      },
-      { databases: [ 
-                      "PostgresSQL", 
-                      "MongoDB",
-                      "SQL"
-                   ]
-      },
-      { back_end: [
-                    "Node.js",
-                    "NPM"
-                  ]
-      },
-      { other: [
-                  "Git/GitHub",
-                  "Unit Testing"
-               ]
-      }
-    ];</code>
-          </pre>
-        </div>-->
-
         <div class="skill-logos">
           <i class="devicon-html5-plain-wordmark colored"></i>
           <i class="devicon-css3-plain-wordmark colored"></i>
@@ -181,8 +142,6 @@
           <i class="devicon-mongodb-plain-wordmark colored"></i>
           <i class="devicon-react-original-wordmark colored"></i>
           <i class="devicon-mocha-plain colored"></i>
-        </div>
-
         </div>
       </div>
     </div>
