--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="description" content="Portfolio - Rick Murdock">
     <meta name="keywords" content="HTML,CSS">
     <meta name="author" content="Rick Murdock">
-    <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/css?family=Hind+Siliguri" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Marcellus+SC" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Ramabhadra" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/css?family=Marcellus+SC" rel="stylesheet">-->
+    <!--<link href="https://fonts.googleapis.com/css?family=Ramabhadra" rel="stylesheet">-->
+    <!--<link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">-->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" media="screen" rel="stylesheet" title="no title">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link href="css/style.css" rel="stylesheet">
