Updated capstone project to React from HTML.

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
         <div class="portfolio-projects">
          <div class="portfolio-item">
             <h4 class="portfolio-item-title">Central Florida Railway Historical Society</h4>
-              <a href="http://cfrhs.surge.sh/"> 
+              <a href="http://cfrhs-react.surge.sh/"> 
                 <img class="portfolio-image" src="./images/CFRHS.png" alt="Central Florida Railway Historical Society" >
               </a>
             <div class="portfolio-button-wrapper">
-              <a  href="https://github.com/rickmurdock/cfrhs"><i class="fa fa-github fa-2x"></i></a>
-              <span class="tech-used">HTML | CSS | Bootstrap &nbsp;(Capstone Project)</span>
+              <a  href="https://github.com/rickmurdock/cfrhs-react"><i class="fa fa-github fa-2x"></i></a>
+              <span class="tech-used">React | CSS | Bootstrap 4 &nbsp;(Capstone Project)</span>
             </div>
           </div>
           <div class="portfolio-item">
