Updated railway site link from test to prod - cfrhs.org

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
         <div class="portfolio-projects">
          <div class="portfolio-item">
             <h4 class="portfolio-item-title">Central Florida Railway Historical Society</h4>
-              <a href="http://cfrhs-react.surge.sh/"> 
+              <a href="http://cfrhs.org/"> 
                 <img class="portfolio-image" src="./images/CFRHS.png" alt="Central Florida Railway Historical Society" >
               </a>
             <div class="portfolio-button-wrapper">
               <a  href="https://github.com/rickmurdock/cfrhs-react"><i class="fa fa-github fa-2x"></i></a>
-              <span class="tech-used">React | CSS | Bootstrap 4 &nbsp;(Capstone Project)</span>
+              <span class="tech-used">React | CSS | Sass | Bootstrap 4 &nbsp;(Capstone Project)</span>
             </div>
           </div>
           <div class="portfolio-item">
@@ -143,8 +143,9 @@
         <div class="skill-logos">
           <i class="devicon-html5-plain-wordmark colored"></i>
           <i class="devicon-css3-plain-wordmark colored"></i>
-          <i class="devicon-javascript-plain colored"></i>
+          <i class="devicon-sass-original colored"></i>
           <i class="devicon-bootstrap-plain-wordmark colored"></i>
+          <i class="devicon-javascript-plain colored"></i>
           <i class="devicon-jquery-plain-wordmark colored"></i>
           <i class="devicon-nodejs-plain-wordmark colored"></i>
           <i class="devicon-express-original-wordmark colored"></i>
