Added Angular Devicon.

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
       <div class="skills-wrapper" >
         <h2 class="skills-title">Skills</h2> 
         <div class="skill-logos">
+          <i class="devicon-angularjs-plain colored"></i>
           <i class="devicon-html5-plain-wordmark colored"></i>
           <i class="devicon-css3-plain-wordmark colored"></i>
           <i class="devicon-sass-original colored"></i>
