Commented out phone from Contact Me.

--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
         <div class="contact-info">
           <a class="contact-email" href="mailto:rick.murdock@live.com?Subject=Portfolio%20Contact"><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;rick.murdock@live.com</a>
           <br><br>
-          <h4 class="contact-phone">
+          <!-- <h4 class="contact-phone">
             <i class="fa fa-mobile" aria-hidden="true"></i>&nbsp;615-513-4313
-          </h4>
+          </h4> -->
           <div class="contact-icons">
             <a href="https://github.com/rickmurdock"><i class="fa fa-github-square github"></i></a>
             <a href="https://www.linkedin.com/in/rickmurdock/"><i class="fa fa-linkedin-square linkedin"></i></a>
