Added copyright at bottom.

--- a/index.html
+++ b/index.html
@@ -178,10 +178,13 @@
             <a href="https://github.com/rickmurdock"><i class="fa fa-github-square fa-2x github"></i></a>
             <a href="https://www.linkedin.com/in/rickmurdock/"><i class="fa fa-linkedin-square fa-2x linkedin"></i></a>
             <a href="https://www.twitter.com/rickmurdock"><i class="fa fa-twitter-square fa-2x twitter"></i></a>
-          </div> 
+          </div>
         </div>
       </div>  
-    </div>
+      <div class="copyright">
+        <p>© 2018 <a href="http://www.rickmurdock.com" class="rickmurdock">RickMurdock</a></p>
+      </div>  
+    </div>   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="main.js"></script>
   </body>
